# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG   = fixed a bug that was crashing

May 23, 2001
	fixed line drawing of width 1
	draw.lines() was broken with sections outside clip

May 22, 2001
	added midleft, midright, midtop, and midbottom to Rect
	added Rect.unionall() function to union a list of Rects
	fixed problem in 16bit surfarrays
	new image.tostring() and image.fromstring()


May 20, 2001
	applied dave wallace's patch to fix memory freeing

May 17, 2001
	a few small compile time warning cleanups

May 16, 2001
	line drawing functions now use an optional width

May 15, 2001
	image module is now builtin, but formats are optional
	enhanced save function in image (handles opengl)
	Surface.save is now depracated

May 14, 2001
	smarter internal module handling
	fixed blit() (broken on May 9th change)

May 10, 2001
	USEREVENT events now pass through the queue
	Event() may be called with keyword args and/or a dict
	Font.render() won't render underlines while smoothing [BUG]

May 9, 2001
	8bit subsurfaces inherit their parents colormap
	blit keeps SDL from crashing with alpha onto 8bit

Apr 30, 2001
	loading Sounds from python objects now works [BUG]
	loading from python objects now thread safe [BUG]

Apr 19, 2001
	applied Niki Spahiev's memory leak patch in event.c
	removed minor memleak from each module's init

Apr 18, 2001
	added opengl support (with example)
	fixed display.get_init()
	current music is free'd when mixer is quit
	better thread sharing in various video calls
	fixed GCC compiler error in constants.c

Apr 10, 2001
	mixer now uses the requested sample format/size

Apr 08, 2001
	properly free SDL objects on malloc errors
	fixed rectangle cropping in pygame.display.update()

pygame-10
Apr 05, 2001
	Everything set for the 1.0 release

Apr 04, 2001
	cursors.load_xbm work on images without hotspots

Apr 03, 2001
	swapped endian-ness for pixels_alpha()

Mar 29, 2001